--- a/Android_Basic/FastCampusAndroid/app/src/main/res/layout/relativelayout.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/res/layout/relativelayout.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
         android:background="@color/design_default_color_on_secondary"/>
 
     <TextView
