--- a/Android_Basic/FastCampusAndroid/app/src/main/res/layout/constraintlayout_1.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/res/layout/constraintlayout_1.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,19 +7,23 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
         android:background="@color/purple_700"
-        app:layout_constraintLeft_toLefttOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="50dp"
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text=""
-        app:layout_constraintLeft_toRightOf="@+id/text1"
+        android:layout_marginEnd="261dp"
         android:background="@color/black"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/text1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text1"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
