--- a/Android_Basic/FastCampusAndroid/app/src/main/res/layout/constraintlayout_2.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/res/layout/constraintlayout_2.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginLeft="100dp"
         android:background="@color/purple_700"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
