--- a/Android_Basic/FastCampusAndroid/app/src/main/res/layout/activity_homework1_lecture.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/res/layout/activity_homework1_lecture.xml
@@ -191,6 +191,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
+        android:id="@+id/equal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
